LPS-67914 Fix alignment issues and asset publisher content shouldn't float on small screens

--- a/modules/apps/frontend-theme-porygon/frontend-theme-porygon/src/css/partials/_user_icon.scss
+++ b/modules/apps/frontend-theme-porygon/frontend-theme-porygon/src/css/partials/_user_icon.scss
@@ -2,6 +2,8 @@
 	background: $brand-bg-color-1;
 
 	.lexicon-icon {
+		margin-top: -7px;
+
 		@include size(20px, 20px);
 	}
 }
